<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/cardMarginVertical"
    android:layout_marginLeft="@dimen/cardMarginHorizontal"
    android:layout_marginRight="@dimen/cardMarginHorizontal"
    android:layout_marginTop="@dimen/cardMarginVertical"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="0dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:scaleType="fitCenter" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/str_name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:fontPath="fonts/NanumSquareOTFBold.otf"
                    tools:ignore="MissingPrefix" />


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/str_coach"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:fontPath="fonts/NanumSquareOTFBold.otf"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_exerciseType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:includeFontPadding="true"
                    android:paddingBottom="2.5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="2.5dp"
                    android:text="@string/str_exercisetype"
                    app:fontPath="fonts/NanumSquareOTFBold.otf"
                    tools:ignore="MissingPrefix"
                    android:textColor="#ffffff"
                    android:background="@color/gray"
                    android:textSize="10sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="2.5dp"
                    android:paddingBottom="2.5dp"
                    app:fontPath="fonts/NanumSquareOTFBold.otf"
                    tools:ignore="MissingPrefix"
                    android:text="@string/str_company"
                    android:textColor="#ffffff"
                    android:background="@color/gray"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>