<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_date_bigsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/str_date"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="gone"
            app:fontPath="fonts/NanumSquareOTFBold.otf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_comment"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@drawable/comment_gray" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/coachName"
                android:textSize="10dp"
                android:textStyle="bold"
                app:fontPath="fonts/NanumSquareOTFBold.otf" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/str_comment_content"
                android:textSize="10dp"
                android:textStyle="bold"
                app:fontPath="fonts/NanumSquareOTFBold.otf" />

        </LinearLayout>


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:text="@string/str_date"
            android:textSize="12dp"
            app:fontPath="fonts/NanumSquareOTFBold.otf" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/str_comment_content"
            android:textColor="#000000"
            android:textSize="15dp"
            app:fontPath="fonts/NanumSquareOTFBold.otf" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:maxLength="20"
                android:text="@string/str_comment_title"
                android:textColor="@color/darkgray"
                android:textSize="10dp"
                app:fontPath="fonts/NanumSquareOTFBold.otf" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray" />
</LinearLayout>